--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <title>Aion Library</title>
 
-    <link rel="stylesheet" href="css/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">
+    <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
     <!--[if lt IE 8]>
-        <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
+        <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
 
-    <script language="javascript" src="js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
+    <link rel="stylesheet" href="/css/index.css" type="text/css" media="screen, projection">
+
+    <script language="javascript" src="/js/mootools-core-1.3.2-full-nocompat-yc.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h2 align="center">Aion Library</h2>
+    <div style="height: 50px;">&nbsp;</div>
+    <div class="container" style="text-align: center;">
+        <img src="/images/logo.png" style="margin-bottom: 50px;" />
 
-        <div align="center" class="large">
-            <p><a href="ap.html">Калькулятор АП</a></p>
-            <p><a href="#">Калькулятор шмота</a> &mdash; В разработке</p>
-        </div>
+        <h1 style="margin-bottom: 50px;">Aion Library</h1>
+
+        <ul class="menu">
+            <li>
+                <a href="/ap.html">Калькулятор АП Aion</a>
+                <span>Aion abyss points AP calculator</span>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
