--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+    <meta name="verify-reformal" content="1c9ec0091cc7ff3314655c0d" />
     <title>Aion Library</title>
 
     <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
