--- a/armor.html
+++ b/armor.html
@@ -127,11 +127,9 @@
                 itemsList: $('posts'),
                 filter: $('filter'),
                 filterLoading: $('loadFilter')
-            }
+            },
+            man: {}
         });
-
-        var man= new Man({});
-        man.initSelectItem();
     });
 </script>
 </body>
