Нормально устанавливаются элементы

--- a/armor.html
+++ b/armor.html
@@ -41,7 +41,7 @@
             <div class="item-line-1-block">
                 <div class="item">&nbsp;</div>
                 <a href="#">a</a>
-                <div class="item child" slot="13">Главная Рука</div>
+                <div class="item child" slot="13" id="item-13">Главная Рука</div>
             </div>
 
             <div class="item-line-1-block c">
@@ -50,7 +50,7 @@
 
             <div class="item-line-1-block r">
                 <div class="item parend">&nbsp;</div>
-                <div class="item child" slot="12">Главная или Вторая Рука</div>
+                <div class="item child" slot="12" id="item-12">Главная или Вторая Рука</div>
                 <a href="#">a</a>
             </div>
 
@@ -60,33 +60,33 @@
         <hr class="space" />
 
         <div class="span-2">
-            <div class="item" slot="1">Голова</div>
+            <div class="item" slot="1" id="item-1">Голова</div>
             <hr class="space" />
-            <div class="item" slot="8">Серьги</div>
+            <div class="item" slot="8" id="item-8-1">Серьги</div>
             <hr class="space" />
-            <div class="item" slot="2">Торс</div>
+            <div class="item" slot="2" id="item-2">Торс</div>
             <hr class="space" />
-            <div class="item" slot="3">Штаны</div>
+            <div class="item" slot="3" id="item-3">Штаны</div>
             <hr class="space" />
-            <div class="item" slot="9">Кольца</div>
+            <div class="item" slot="9" id="item-9-1">Кольца</div>
             <hr class="space" />
-            <div class="item" slot="4">Ботинки</div>
+            <div class="item" slot="4" id="item-4">Ботинки</div>
         </div>
-        <div class="span-4">
+        <div class="span-3">
             Image
         </div>
         <div class="span-2">
-            <div class="item" slot="7">Ожерелья</div>
+            <div class="item" slot="7" id="item-7">Ожерелья</div>
             <hr class="space" />
-            <div class="item" slot="8">Серьги</div>
+            <div class="item" slot="8" id="item-8-2">Серьги</div>
             <hr class="space" />
-            <div class="item" slot="5">Наплечники</div>
+            <div class="item" slot="5" id="item-5">Наплечники</div>
             <hr class="space" />
-            <div class="item" slot="6">Перчатки</div>
+            <div class="item" slot="6" id="item-6">Перчатки</div>
             <hr class="space" />
-            <div class="item" slot="9">Кольца</div>
+            <div class="item" slot="9" id="item-9-2">Кольца</div>
             <hr class="space" />
-            <div class="item" slot="10">Пояс</div>
+            <div class="item" slot="10" id="item-10">Пояс</div>
         </div>
 
         <div class="clear"></div>
