Загрузка итемов и вывод

--- a/armor.html
+++ b/armor.html
@@ -82,7 +82,38 @@
     <div id="findItem-list">
     </div>
 </div>
+<div class="clear"></div>
 
+<!--
+<div style="margin-top: 50px;" class="itemHtml">
+    <div class="main">
+        <div class="title q6">Орб разгневанного Теграка</div>
+        <div class="type"><span>Тип</span> 14</div>
+        <div>
+            <div>Можно использовать с 55-го уровня</div>
+        </div>
+    </div>
+    <div class="skills">
+        <div>Медленное оружие, кол-во ударов: 1 (Стихия огня)</div>
+        <label>Атака <span>277 - 339</span></label>
+        <label>Скор. атаки <span>2.2</span></label>
+        <label>Сила магии <span>880</span></label>
+        <label>Точн. магии <span>401</span></label>
+        <label>PVP atack <span>0</span></label>
+        <label>PVP protect <span>0</span></label>
+    </div>
+    <div class="skills">
+        <label>Макс. HP <span>+509</span></label>
+        <label>Точн. магии <span>+61</span></label>
+        <label>Сила магии <span>+85</span></label>
+        <label>М. крит. <span>+20</span></label>
+        <label>Скор. магии <span>+20%</span></label>
+        <label>Макс. MP <span>+938</span></label>
+    </div>
+    <div>Можно вставить магический камень</div>
+</div>-->
+
+<div id="item"></div>
 
 <script language="javascript">
 window.addEvent('domready', function() {
